<resources>
    <string name="title_top_up">Top Up</string>
    <string name="currency">Rp%1$d</string>
    <string name="validity">Validity</string>
    <string name="validity_unlimited">Unlimited</string>
    <string name="talk_time">Talktime</string>
    <string name="recharge">Recharge</string>
    <string name="pay">Pay</string>
    <string name="recharge_amount">Rp%1$s</string>
    <string name="coming_soon">Coming Soon…</string>
    <string name="pulsa">Pulsa</string>
    <string name="data_package">Data Package</string>
    <string name="top_up">Top Up</string>
    <string name="purchase">Purchase</string>
    <string name="payment_details">Payment Details</string>
    <string name="order_details">Order Details</string>
    <string name="sub_total">Subtotal</string>
    <string name="order_id">Order Id</string>
    <string name="status">Status</string>
    <string name="success">Success</string>
    <string name="kredivo_discount">Kredivo discount</string>
    <string name="payment_days_30">Pay in 30 days</string>
    <string name="voucher">Voucher</string>
    <string name="view">View</string>
    <string name="use">Use</string>
    <string name="voucher_for_you">Voucher for you</string>
    <string name="kredivo_pin">Kredivo PIN</string>
    <string name="pin">PIN</string>
    <string name="my_voucher">My Voucher</string>
    <string name="voucher_discount">VOUCHER \nDISCOUNT</string>
    <string name="percentage_symbol">&#37;</string>
    <string name="max_discount">Discount: %1$d%% (Max: %2$drb)</string>
    <string name="discount_up_to">Discount up to Rp%1$d</string>
    <string name="valid_until">Valid until: %1$s</string>
    <string name="min_transaction">Min transaction: %1$drb</string>
    <string name="voucher_code">(%1$s)</string>
    <string name="enter_pin">Enter your 6 digit PIN</string>
    <string name="mobile_number">Mobile number</string>
    <string name="country_code">+62</string>
    <string name="invalid_mobile_number">Mobile number should be between 11 to 13 digit</string>
    <string name="voucher_applied_message">Yeay! You got %1$d%%  discount max Rp%2$d</string>
    <string name="terms_and_condition">By continuing, I agree with Product and Service Information Summary &amp; Kredivo loan agreement</string>
    <string name="contact_support">If you have problem with your transaction, make sure to contact out customer service at 0807-1-573-348 or support@kredivo.com</string>



</resources>
