<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_order_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/payment_details"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_large"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_provider_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/img_telkomsel"
            app:layout_constraintStart_toStartOf="@+id/tv_order_details"
            app:layout_constraintTop_toBottomOf="@+id/tv_order_details" />

        <TextView
            android:id="@+id/tv_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="123456789123"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_provider_logo"
            app:layout_constraintStart_toEndOf="@+id/iv_provider_logo"
            app:layout_constraintTop_toTopOf="@+id/iv_provider_logo" />


        <View
            android:id="@+id/view_border_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="18dp"
            android:background="@color/grey_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_provider_logo" />

        <TextView
            android:id="@+id/tv_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:text="@string/status"
            android:textColor="@color/grey"
            android:textSize="@dimen/tv_medium"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/iv_provider_logo"
            app:layout_constraintTop_toBottomOf="@+id/view_border_2" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:text="@string/success"
            android:textColor="@color/green"
            android:textSize="@dimen/tv_medium"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/tv_status_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_status_label" />


        <TextView
            android:id="@+id/tv_oder_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:text="@string/order_id"
            android:textColor="@color/grey"
            android:textSize="@dimen/tv_medium"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/tv_status_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_status_label" />

        <TextView
            android:id="@+id/tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:textColor="@color/green"
            android:textSize="@dimen/tv_medium"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/tv_oder_id_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_oder_id_label"
            tool:text="dfvdsvds" />


        <View
            android:id="@+id/view_border_3"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="18dp"
            android:background="@color/grey_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_oder_id_label" />


        <TextView
            android:id="@+id/tv_payment_details_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/payment_days_30"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_large"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/iv_provider_logo"
            app:layout_constraintTop_toBottomOf="@+id/view_border_3" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/grey"
            android:textSize="@dimen/tv_medium"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/tv_product_amount"
            app:layout_constraintStart_toStartOf="@+id/iv_provider_logo"
            app:layout_constraintTop_toBottomOf="@+id/tv_payment_details_label"
            tool:text="dgegergefgfgherthtrhtrhtrhrthrthrthrthrthrthrthrthrthrthrthrthtr" />

        <TextView
            android:id="@+id/tv_product_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:textColor="@color/grey"
            android:textSize="@dimen/tv_medium"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/tv_product_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_product_name"
            tool:text="Rp1000" />

        <View
            android:id="@+id/view_border_4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="18dp"
            android:background="@color/grey_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_amount" />

        <TextView
            android:id="@+id/tv_sub_total_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:text="@string/sub_total"
            android:textColor="@color/grey"
            android:textSize="@dimen/tv_medium"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/iv_provider_logo"
            app:layout_constraintTop_toBottomOf="@+id/view_border_4" />

        <TextView
            android:id="@+id/tv_sub_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:textColor="@color/grey"
            android:textSize="@dimen/tv_medium"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sub_total_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_sub_total_label"
            tool:text="Rp1000" />

        <View
            android:id="@+id/view_border_5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/view_dotted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_total_amount" />

        <TextView
            android:id="@+id/tv_payment_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/payment_days_30"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_large"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/iv_provider_logo"
            app:layout_constraintTop_toBottomOf="@+id/view_border_5" />

        <TextView
            android:id="@+id/tv_payment_days_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="@color/orange"
            android:textSize="@dimen/tv_large"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/tv_payment_days"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_payment_days"
            tool:text="Rp1000" />

        <TextView
            android:id="@+id/tv_contact_support"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/grey_light"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/contact_support"
            android:textAlignment="textStart"
            android:textColor="@color/grey"
            android:textSize="@dimen/tv_very_small"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_payment_days_amount" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>