<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_marginStart="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="4dp"
    android:elevation="2dp"
    app:cardCornerRadius="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_voucher_discount_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view_background"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:background="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_voucher_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/voucher_discount"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view_background"
            app:layout_constraintStart_toStartOf="@+id/view_background"
            app:layout_constraintTop_toTopOf="@+id/view_background" />

        <TextView
            android:id="@+id/tv_voucher_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tool:text="VOUCHER50PROMO"
            android:layout_marginStart="4dp"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_small"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/tv_voucher_label"
            app:layout_constraintEnd_toEndOf="@+id/tv_voucher_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_voucher_label" />

        <TextView
            android:id="@+id/tv_voucher_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_heading"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view_background"
            app:layout_constraintEnd_toStartOf="@+id/tv_voucher_percentage_symbol"
            app:layout_constraintTop_toTopOf="@+id/view_background" />

        <TextView
            android:id="@+id/tv_voucher_percentage_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:text="@string/percentage_symbol"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_extra_large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_voucher_percentage"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/tv_voucher_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="Discount 50%(Max.50rb)"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_small"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_background" />

        <TextView
            android:id="@+id/tv_voucher_validity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:paddingBottom="12dp"
            tool:text="Valid until 01 March 2024"
            android:textColor="@color/grey"
            android:textSize="@dimen/tv_very_small"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_voucher_condition" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_use_voucher"
            style="@style/MaterialButtonStyle"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/use"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_very_small"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_voucher_validity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_voucher_condition" />

        <TextView
            android:id="@+id/tv_voucher_min_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tool:text="Min transaction 10500"
            android:textColor="@color/grey"
            android:textSize="@dimen/tv_very_small"
            android:layout_marginEnd="12dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_use_voucher" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
